# notion-rs

./: Cargo.toml  README.md
notion-sdk/: Cargo.toml  README.md
notion-sdk/src/: error.rs  lib.rs  pagination.rs
notion-sdk/src/block/: api.rs  code.rs  id.rs  mod.rs  todo.rs
notion-sdk/src/comment/: mod.rs
notion-sdk/src/common/: mod.rs  parent.rs  rich_text.rs
notion-sdk/src/database/: date.rs  files.rs  formula.rs  id.rs  mod.rs  number.rs  properties.rs  relation.rs  status.rs
notion-sdk/src/pages/: aka.rs  api.rs  id.rs  mod.rs
notion-sdk/src/search/: api.rs  mod.rs
notion-sdk/src/user/: api.rs  id.rs  mod.rs
notion-sdk/src/user/test/: bot.json  list.json
src/: error.rs  lib.rs
src/block/: id.rs  mod.rs
src/common/: aka.rs  file.rs  parent.rs  rich_text.rs
src/database/: api.rs  id.rs  properties.rs  rollup.rs  select.rs
src/pages/: aka.rs  api.rs  id.rs  mod.rs
src/user/: api.rs  id.rs  mod.rs
tests/: page.rs  user.rs
