[package]
name = "notion-sdk"
edition = "2021"
description = "A rust implementation of the notion-sdk."
homepage = "https://github.com/emo-crab/notion-sdk"
repository = "https://github.com/emo-crab/notion-sdk"
authors = ["Kali-Team <root@kali-team.cn>"]
readme = "README.md"
license = "GPL-3.0-only"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
uuid = { version = "1.3.0", features = ["serde"] }
chrono = { version = "0.4.23", default-features = false, features = ["serde", "clock"] }
emojis = "0.6.0"
thiserror = "1.0"
derive_builder = "0.20.0"


[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }