[package]
name = "notion-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
uuid = { version = "1.3.0", features = ["serde"] }
chrono = { version = "0.4.23", default-features = false, features = ["serde", "clock"] }
emojis = "0.6.0"
thiserror = "1.0"